[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
  { include = "brain_games" },
]
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
repository = "https://github.com/markwinboy/python-project-49"

[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"
operators = "^1.0.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.engine:brain_even_func"
brain-calc = "brain_games.engine:brain_calc_func"
brain-gcd = "brain_games.engine:brain_gcd_func"
brain-progression = "brain_games.engine:brain_progression_func"
brain-prime = "brain_games.engine:brain_prime_func"
